force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingCountry__c</fullName>
    <description>The billing country</description>
    <inlineHelpText>The billing country</inlineHelpText>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>