force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingPostalCode__c</fullName>
    <description>The billing postal code</description>
    <inlineHelpText>The billing postal code</inlineHelpText>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>