force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__BillingPreferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingPreferenceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated billing preference</description>
    <inlineHelpText>ID of the associated billing preference</inlineHelpText>
    <label>Billing Preference (Deprecated)</label>
    <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>