force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingStreet__c</fullName>
    <description>The billing street</description>
    <inlineHelpText>The billing street</inlineHelpText>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>