force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__CollectionStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CollectionStatus__c</fullName>
    <description>The invoice collection status</description>
    <inlineHelpText>The invoice collection status</inlineHelpText>
    <label>Collection Status (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Collections</fullName>
            </value>
            <value>
                <fullName>Transferred to Collections Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>