force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DeliveryStatus__c</fullName>
    <description>The invoice delivery status</description>
    <inlineHelpText>The invoice delivery status</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>