force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__DueDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DueDate__c</fullName>
    <description>The invoice due date</description>
    <inlineHelpText>The invoice due date</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>