force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ErrorMessage__c</fullName>
    <description>Details about the error.</description>
    <inlineHelpText>Details about the error.</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>