force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__InvoiceAttachmentTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceAttachmentTemplate__c</fullName>
    <description>The optional Name of the Template to use when creating an attachment file for the Invoice.</description>
    <inlineHelpText>The optional Name of the Template to use when creating an attachment file for the Invoice.</inlineHelpText>
    <label>Invoice Attachment Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>