force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceDate__c</fullName>
    <description>The invoice date</description>
    <inlineHelpText>The invoice date</inlineHelpText>
    <label>Invoice Date</label>
    <type>DateTime</type>
</CustomField>