force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__InvoiceEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceEmailTemplate__c</fullName>
    <description>The optional Name of the Email Template to use when creating the Email used to deliver the Invoice attachment file.</description>
    <inlineHelpText>The optional Name of the Email Template to use when creating the Email used to deliver the Invoice attachment file.</inlineHelpText>
    <label>Invoice Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>