force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceNumber__c</fullName>
    <description>The custom Invoice number.  Will only be set if Invoice Custom Numbering has been configured.</description>
    <inlineHelpText>The custom Invoice number.  Will only be set if Invoice Custom Numbering has been configured.</inlineHelpText>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>