force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__InvoiceRunResultId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceRunResultId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the invoice run result that created the invoice.</description>
    <inlineHelpText>ID of the invoice run result that created the invoice.</inlineHelpText>
    <label>Invoice Run Result Id</label>
    <referenceTo>Apttus_Billing__InvoiceRunResult__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>