force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentStatus__c</fullName>
    <description>Payment status for the invoice</description>
    <inlineHelpText>Payment status for the invoice</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>