force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__ShipToCity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToCity__c</fullName>
    <description>The ship to city</description>
    <inlineHelpText>The ship to city</inlineHelpText>
    <label>Ship To City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>