force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__ShipToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ShipToPostalCode__c</fullName>
    <description>The ship to postal code</description>
    <inlineHelpText>The ship to postal code</inlineHelpText>
    <label>Ship To Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>