force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__SoldToCountry__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SoldToCountry__c</fullName>
    <description>The sold to country</description>
    <inlineHelpText>The sold to country</inlineHelpText>
    <label>Sold To Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>