force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__SoldToPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SoldToPostalCode__c</fullName>
    <description>The sold to postal code</description>
    <inlineHelpText>The sold to postal code</inlineHelpText>
    <label>Sold To Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>