force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__SoldToStreet__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SoldToStreet__c</fullName>
    <description>The sold to street</description>
    <inlineHelpText>The sold to street</inlineHelpText>
    <label>Sold To Street</label>
    <type>TextArea</type>
</CustomField>