force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__SourceInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__SourceInvoiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to link split invoice to source invoice</description>
    <inlineHelpText>This field is managed by the billing package for split invoice functionality. This field should not be manually populated</inlineHelpText>
    <label>Source Invoice</label>
    <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
    <relationshipLabel>Split Invoices</relationshipLabel>
    <relationshipName>SplitInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>