force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>The invoice status</description>
    <inlineHelpText>The invoice status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Approved</fullName>
            </value>
            <value>
                <fullName>Draft Obsolete</fullName>
            </value>
            <value>
                <fullName>Credited</fullName>
            </value>
            <value>
                <fullName>Distributed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>