force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__TotalAdditionalFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalAdditionalFeeAmount__c</fullName>
    <description>The total additional fee amount</description>
    <inlineHelpText>The total additional fee amount</inlineHelpText>
    <label>Total Additional Fee Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>