force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalDiscountAmount__c</fullName>
    <description>The total discount amount</description>
    <inlineHelpText>The total discount amount</inlineHelpText>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>