force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__TotalOneTimeFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalOneTimeFeeAmount__c</fullName>
    <description>The total one time fee amount</description>
    <inlineHelpText>The total one time fee amount</inlineHelpText>
    <label>Total One Time Fee Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>