force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalTaxAmount__c</fullName>
    <description>The total tax amount</description>
    <inlineHelpText>The total tax amount</inlineHelpText>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>