force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__TotalUsageFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalUsageFeeAmount__c</fullName>
    <description>The total usage fee amount</description>
    <inlineHelpText>The total usage fee amount</inlineHelpText>
    <label>Total Usage Fee Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>