force-app/main/default/objects/Apttus_Billing__Invoice__c/fields/Apttus_Billing__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Type__c</fullName>
    <description>The invoice type</description>
    <inlineHelpText>The invoice type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>