force-app/main/default/objects/Apttus_Billing__Invoice__c/listViews/Apttus_Billing__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Billing__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Billing__BillToAccountId__c</columns>
    <columns>Apttus_Billing__Status__c</columns>
    <columns>Apttus_Billing__PaymentTermId__c</columns>
    <columns>Apttus_Billing__InvoiceDate__c</columns>
    <columns>Apttus_Billing__TotalInvoiceAmount__c</columns>
    <columns>Apttus_Billing__TotalFeeAmount__c</columns>
    <columns>Apttus_Billing__TotalTaxAmount__c</columns>
    <columns>Apttus_Billing__InvoiceRunResultId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>